@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="context.venom" version="1.0.8" name="Venom - Global Context Menu Items" provider-name="Venom">
+<addon id="context.venom" version="1.0.9" name="Venom - Global Context Menu Items" provider-name="Venom">
 	<requires>
 		<import addon="xbmc.python" version="2.23.0" />
+		<import addon="script.module.requests" version="2.19.1" />
 	</requires>
 	<extension point="kodi.context.item">
 		<menu id="kodi.core.main">
@@ -131,9 +132,10 @@
 			<fanart>fanart.png</fanart>
 		</assets>
 		<news>
-[B][COLOR red]Update - v1.0.8 - Sept 29, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Fix issue with accent characters causing stop errors.[/I]
-[COLOR yellow]--[/COLOR][I] added service logging notice for kodi.log.[/I]
+[B][COLOR red]Update - v1.0.9 - Oct. 05, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed Trakt Manager not opening.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed Context Settings not opening.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed service update check.[/I]
 		</news>
 	</extension>
 </addon>
