@@ -1,3 +1,8 @@
+[B][COLOR red]Update - v1.0.9 - Oct. 05, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed Trakt Manager not opening.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed Context Settings not opening.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed service update check.[/I]
+
 [B][COLOR red]Update - v1.0.8 - Sept 29, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Fix issue with accent characters causing stop errors.[/I]
 [COLOR yellow]--[/COLOR][I] added service logging notice for kodi.log.[/I]
